fixed the overflow issue and finalized the design for the navbar desktop

--- a/public/src/css/hero.css
+++ b/public/src/css/hero.css
@@ -5,8 +5,8 @@
     /* align-items: center; */
     justify-content: center;
     padding-left: 6rem;
-    padding-top: 5rem;
-    /* overflow-x: hidden; */
+    /* padding-top: 5rem; */
+    /* overflow-y: hidden; */
     text-shadow: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff,
     -1px -1px 0 #fff;
 }
@@ -15,7 +15,7 @@
 
 
 #hero-title{
-
+    padding-top: 15rem;
     font-family: BespokenSans-bold;
     font-size: 4.5rem;
 }
