--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -14,7 +14,7 @@ body{
 
 
 #clear{
-    position: absolute;
+    position: fixed;
     z-index: -1;
     top: 0;
     left: 0;
